--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+4
+version: 1.0.5+5
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.6
   fluttertoast: ^8.2.1
   url_launcher: ^6.1.11
+  home_widget: ^0.4.1
   intl: ^0.18.1
   flutter_local_notifications: ^14.1.0
   android_alarm_manager_plus: ^3.0.2
