--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,9 +32,8 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
-
+    compileSdkVersion flutter.compileSdkVersion // flutter.compileSdkVersion is 34
+    ndkVersion flutter.ndkVersion // flutter.ndkVersion is "23.1.7779620"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -57,9 +56,15 @@ android {
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
     repositories {
-
+        google()
+        mavenCentral()
+        maven { url 'https://android-sdk.is.com/' }
+        maven {
+            url "https://jitpack.io"
+        }
     }
 
     signingConfigs {
@@ -72,6 +77,8 @@ android {
     }
     buildTypes {
         release {
+            minifyEnabled true
+            // For Vungle-specific rules
             signingConfig signingConfigs.release
             shrinkResources false
         }
@@ -82,6 +89,24 @@ flutter {
     source '../..'
 }
 
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+// Add AdColony Network
+    implementation 'com.ironsource.adapters:adcolonyadapter:4.3.15'
+    implementation 'com.adcolony:sdk:4.8.0'
+
+// Add Vungle Network
+    implementation 'com.ironsource.adapters:vungleadapter:4.3.23'
+    implementation 'com.vungle:vungle-ads:7.1.0'
+// Add UnityAds Network
+    implementation 'com.ironsource.adapters:unityadsadapter:4.3.34'
+    implementation 'com.unity3d.ads:unity-ads:4.9.2'
+
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation 'com.google.android.gms:play-services-basement:18.0.0'
+    implementation 'com.google.android.gms:play-services-appset:16.0.2'
 }
