--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,14 +13,18 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <!-- For apps with targetSDK=31 (Android 12) -->
+
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+
     <uses-sdk android:minSdkVersion="19" />
 
     <application
-       tools:replace="android:label"
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:replace="android:label"
         android:label="Weathery"
         android:name="${applicationName}"
         android:icon="@mipmap/weathery_icon">
@@ -39,6 +43,11 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <activity android:name="com.adcolony.sdk.AdColonyAdViewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:hardwareAccelerated="true"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -66,6 +75,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
     </application>
     <!-- Provide required visibility configuration for API level 30 and above -->
     <queries>
