--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+6
+version: 2.0.0+9
+
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -32,7 +33,7 @@ dependencies:
     sdk: flutter
 
   shared_preferences: ^2.1.0
-  geolocator: ^13.0.2
+  geolocator: ^13.0.4
   app_settings: ^5.2.0
   http: ^1.3.0
   fluttertoast: ^8.2.1
@@ -42,7 +43,15 @@ dependencies:
   android_alarm_manager_plus: ^4.0.7
   internet_connection_checker: ^3.0.1
   share_plus: ^10.1.4
-  ironsource_mediation: ^3.1.0
+  google_mobile_ads: ^5.3.1
+  home_widget: ^0.7.0+1
+  go_router: ^14.8.1
+  quick_actions: ^1.1.0
+  path_provider: ^2.1.5
+  flutter_riverpod: ^2.6.1
+  flutter_animate : ^4.5.2
+  permission_handler: ^12.0.0+1
+  gma_mediation_liftoffmonetize: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
