--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.1+10
+version: 2.1.0+11
 
 
 environment:
@@ -36,7 +36,6 @@ dependencies:
   geolocator: ^13.0.4
   app_settings: ^5.2.0
   http: ^1.3.0
-  fluttertoast: ^8.2.1
   url_launcher: ^6.1.11
   intl: ^0.20.2
   flutter_local_notifications: ^18.0.1
@@ -52,6 +51,7 @@ dependencies:
   flutter_animate : ^4.5.2
   permission_handler: ^12.0.0+1
   gma_mediation_liftoffmonetize: ^1.1.0
+  app_links: ^6.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
