--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.1.0+11
+version: 2.7.5+15
 
 
 environment:
@@ -52,9 +52,10 @@ dependencies:
   permission_handler: ^12.0.0+1
   gma_mediation_liftoffmonetize: ^1.1.0
   app_links: ^6.4.1
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  icons_plus: ^5.0.0
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+
 
 dev_dependencies:
   flutter_test:
@@ -96,9 +97,6 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf
 
     - family : PT Sans
       fonts:
